--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,15 @@ main {
   height: 100%;
 }
 
+.links a{
+  margin-right: 10px; 
+}
+
+.aqua span{
+  color: aqua;
+
+}
+
 @media screen and (min-width: 980px) {
   .navbar {
     display: flex;
