--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,6 +54,17 @@
     height: 100%;
   }
 
+.links a{
+  margin-right: 10px; 
+}
+
+.aqua span{
+  color: aqua;
+  text-decoration: none;
+}
+
+
+
   @media screen and (min-width: 980px) {
     .navbar {
       display: flex;
