--- a/css/main.css
+++ b/css/main.css
@@ -54,13 +54,13 @@ main {
   height: 100%;
 }
 
-.links a{
-  margin-right: 10px; 
+.links a {
+  margin-right: 10px;
 }
 
-.aqua span{
+.aqua span {
   color: aqua;
-
+  text-decoration: none;
 }
 
 @media screen and (min-width: 980px) {
@@ -123,6 +123,13 @@ main {
     height: 350px;
     width: 100%;
     outline: #b07a7a solid;
+    margin-top: 1em;
+    border-radius: 8px;
+  }
+  .img {
+    height: 350px;
+    width: 100%;
+    outline: #d80f0f solid;
     margin-top: 1em;
     border-radius: 8px;
   }
