--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,26 @@ main {
     outline: green solid;
     height: 100%;
     flex: 2;
-    display: block;
+    display: flex;
+    font-size: 18px;
+    text-decoration: none;
+  }
+  .bloque-enlaces li {
+    list-style: none;
+    padding: 5%;
+  }
+  .bloque-enlaces li a {
+    color: gray;
+    text-decoration: none;
+  }
+  .bloque-enlaces li a:hover {
+    color: blue;
+  }
+  .bloque-enlaces li h3 {
+    color: black;
+  }
+  .bloque-enlaces li h3:hover {
+    color: blue;
   }
   .callToAction {
     height: 150px;
