--- a/sass/_aside.scss
+++ b/sass/_aside.scss
@@ -24,3 +24,11 @@
     width: 100%;
     justify-content: center;
 }
+
+.tags {
+    height: 350px;
+    width: 100%;
+    outline: #b07a7a solid;
+    margin-top: 1em;
+    border-radius: 8px;
+  }
