--- a/sass/main.scss
+++ b/sass/main.scss
@@ -147,6 +147,12 @@
         margin-top: 1em;
         border-radius: 8px;
       }
+
+      .story-author-preview-trigger-1606551 {
+        display: flex;
+        justify-content: space-between;
+
+      }
   }
 
 
