--- a/sass/main.scss
+++ b/sass/main.scss
@@ -173,10 +173,9 @@
         border-radius: 8px;
       }
 
-      .story-author-preview-trigger-1606551 {
+      .crayons-logo__image {
         display: flex;
-        justify-content: space-between;
-
+        justify-content: center;
       }
   }
 
