--- a/sass/main.scss
+++ b/sass/main.scss
@@ -50,115 +50,18 @@
 
   main {
     flex: 1;
-    // outline: red solid;
+    outline: red solid;
     height: 100%;
   }
 
-.links{
-  margin-top: 5px;
-}
-
 .links a{
-  
   margin-right: 10px; 
-  text-decoration: none;
-  color: rgb(109, 108, 108);
 }
-
-
 
 .aqua span{
   color: aqua;
-  
-}
-
-.aqua:hover{
-  border: 1px solid aqua;
-  background-color: rgba(170, 216, 216, 0.37);
-  border-radius: 5px;
-  padding: 2.5px;
-}
-
-.purple span{
-  color: purple;
-  
-}
-
-.purple:hover{
-  border: 1px solid purple;
-  background-color: rgba(100, 57, 100, 0.384);
-  border-radius: 5px;
-  padding: 2.5px;
-}
-
-.yellow span{
-  color: yellow;
-  
-}
-
-.yellow:hover{
-  border: 1px solid yellow;
-  background-color: rgba(232, 232, 130, 0.404);
-  border-radius: 5px;
-  padding: 2.5px;
-}
-
-.black span{
-  color: grey;
-  
-}
-
-.black:hover{
-  border: 1px solid grey;
-  background-color: rgba(128, 128, 128, 0.333);
-  border-radius: 5px;
-  padding: 2.5px;
-}
-
-.icons{
-  margin: 10px 20px;
-  display: flex;
-
-  
-}
-
-.icons a {
-  display: flex;
   text-decoration: none;
-  color: grey;
-  margin-right: 20px;
-  
 }
-
-.icons a i {
-  width: 15px;
-  margin-right: 5px;
-  
-}
-
-.icons a p{
-  padding-top: 5px;
-  font-size: 15px;
-}
-
-.comments{
-  padding-top: 5px;
-  font-size: 15px;
-}
-
-.time{
-  font-size: 10px;
-  padding-top: 7px;
-}
-
-.button{
-  border: none;
-}
-
-
-
-
-
 
 
 
@@ -202,16 +105,9 @@
     color: rgba(0, 0, 0, 1);
   }
 
-  .flex-col.left {
-    outline: blue solid;
-    height: 100%;
-    flex: 1;
-    display: block;
-  }
-
     main {
       flex: 4;
-      // outline: red solid;
+      outline: red solid;
       height: 100%;
     }
 // me toca este
@@ -247,12 +143,6 @@
       }
     }
 
-    .callToAction {
-      height: 150px;
-      width: 100%;
-      outline: #f58989 solid;
-      border-radius: 8px;
-    }
 
     .tags {
       height: 350px;
@@ -268,7 +158,6 @@
         outline: #d80f0f solid;
         margin-top: 1em;
         border-radius: 8px;
-        object-fit: contain;
       }
   }
 
