--- a/sass/main.scss
+++ b/sass/main.scss
@@ -119,19 +119,23 @@
     }
 // me toca este
     .flex-col.right {
-      outline: green solid;
+      //outline: green solid;
       height: 100%;
       flex: 2;
       display: flex;
       font-size: 18px;
       text-decoration: none;
+      
      
     }
 
     .bloque-enlaces{
       li{
         list-style: none;
-        padding: 5%;
+        padding: 8%;
+        outline: auto;
+        outline-color: lightgray;
+        background-color: #fff;
         
         a{
           color: gray;
@@ -139,6 +143,7 @@
             color: blue;
           }
           text-decoration: none;
+          
         }
         
         h3{
