--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,35 @@ main {
   border: none;
 }
 
+.logo_dev {
+  border-radius: 50px;
+  width: 50px;
+}
+
+.parrafo1 {
+  display: flex;
+}
+
+.hola {
+  padding-top: 10px;
+  margin-left: 5px;
+}
+
+.hola a {
+  text-decoration: none;
+  color: black;
+}
+
+.hola a:hover {
+  color: rgb(163, 160, 160);
+  outline: 1px solid black;
+}
+
+.hola_2 {
+  font-size: 10px;
+  color: rgba(122, 122, 122, 0.616);
+}
+
 @media screen and (min-width: 980px) {
   .navbar {
     display: flex;
@@ -211,6 +240,12 @@ main {
   .bloque-enlaces li h3:hover {
     color: blue;
   }
+  .callToAction {
+    height: 150px;
+    width: 100%;
+    outline: #f58989 solid;
+    border-radius: 8px;
+  }
   .tags {
     height: 350px;
     width: 100%;
@@ -226,6 +261,10 @@ main {
     border-radius: 8px;
     -o-object-fit: contain;
        object-fit: contain;
+  }
+  .crayons-logo__image {
+    display: flex;
+    justify-content: center;
   }
 }
 .aside1 {
