--- a/sass/main.scss
+++ b/sass/main.scss
@@ -155,7 +155,34 @@
   border: none;
 }
 
+.logo_dev {
+  border-radius: 50px;
+  width: 50px;
+}
 
+.parrafo1 {
+  display: flex;
+}
+
+.hola {
+  padding-top: 10px;
+  margin-left: 5px;
+}
+
+.hola a {
+  text-decoration: none;
+  color: black;
+}
+
+.hola a:hover {
+  color: rgb(163, 160, 160);
+  outline: 1px solid black;
+}
+
+.hola_2 {
+  font-size: 10px;
+  color: rgba(122, 122, 122, 0.616);
+}
 
 
 
