--- a/css/main.css
+++ b/css/main.css
@@ -156,20 +156,29 @@ main {
   color: #242424;
 }
 
-.aside2 {
+.parrafo-text {
   margin-bottom: 1rem;
   color: #575757;
 }
 
-.caja2 {
-  box-sizing: border-box;
-  line-height: 1.5;
+.enlace1 {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-bottom: 1rem;
+  width: 100%;
+  border-width: 1px;
+  padding: 1px;
 }
 
-.create {
-  margin-bottom: 0.25rem;
+.enlace2 {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-bottom: 1rem;
   width: 100%;
-  justify-content: center;
+  border-width: 1px;
+  padding: 1px;
 }
 
 .tags {
