--- a/sass/_aside.scss
+++ b/sass/_aside.scss
@@ -12,22 +12,30 @@
     font-size: 1.25rem;
     color: #242424;
 }
-.aside2{
+.parrafo-text{
     margin-bottom: 1rem;
     color: #575757; 
 }
 
-.caja2{
-    box-sizing: border-box;
-    line-height: 1.5;
-}
-
-.create{
-    margin-bottom: .25rem;
+.enlace1{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 1rem;
     width: 100%;
-    justify-content: center;
+    border-width: 1px;
+    padding:1px;
 }
 
+.enlace2{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 1rem;
+    width: 100%;
+    border-width: 1px;
+    padding:1px;
+}
 .tags {
     height: 350px;
     width: 100%;
