--- a/css/main.css
+++ b/css/main.css
@@ -19,17 +19,13 @@ body {
   padding-bottom: 10px;
 }
 
-/* .main-nav {
-  list-style-type: none;
-  display: none;
-} */
 .nav-links,
 .logo {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.7);
 }
 
-.content {
+/*.content {
   width: 80%;
   margin: 0 auto;
   display: flex;
@@ -52,69 +48,87 @@ main {
   flex: 1;
   outline: red solid;
   height: 100%;
-}
-
+}*/
+/*navbar*/
 @media screen and (min-width: 980px) {
-  .navbar {
-    display: flex;
+  /*.navbar {
+    display: block;
+    background-color: #fff;
     justify-content: space-between;
     padding-bottom: 0;
-    height: 70px;
+    height: 90px;
     align-items: center;
-  }
+    margin-left: auto;
+  }*/
   .main-nav {
     display: flex;
     margin-right: 30px;
-    flex-direction: row;
-    justify-content: flex-end;
     list-style: none;
   }
   .main-nav li {
     margin: 0;
   }
-  .nav-links {
-    margin: 20px;
-    color: black;
+  .nav-toggle {
+    align-items: flex-start;
+    margin-left: 50px;
+    font-size: 40px;
+    color: white;
+    background-color: black;
+    padding: 15px;
+    border-radius: 10px;
+    position: relative;
+    height: 70px;
+    left: 50px;
+    top: 16px;
+  }
+  .buttom1 {
+    color: gray;
+    font-size: 35px;
+    width: 900px;
+    height: 75px;
+    padding: 25px;
+    border: 4px solid gray;
+    margin: 15px;
+    border-radius: 10px;
+    position: relative;
+    left: 100px;
+  }
+  .buttom2 {
+    font-size: 30px;
+    color: gray;
     list-style: none;
+    font-size: 30px;
+    padding: 25px;
+    margin: 8px;
+    width: 52px;
+    border-radius: 10px;
+    text-decoration: none;
+    position: relative;
+    left: 1400px;
+    top: 29px;
   }
-  .logo {
-    margin-top: 0;
+  .buttom2:hover {
+    background-color: rgb(130, 198, 238);
+    text-decoration: underline;
   }
-  .navbar-toggle {
-    display: none;
+  .buttom3:hover {
+    background-color: blue;
+    color: white;
+    text-decoration: underline;
   }
-  .logo:hover,
-  .nav-links:hover {
-    color: rgb(0, 0, 0);
-  }
-  .flex-col.left {
-    outline: blue solid;
-    height: 100%;
-    flex: 1;
-    display: block;
-  }
-  main {
-    flex: 4;
-    outline: red solid;
-    height: 100%;
-  }
-  .flex-col.right {
-    outline: green solid;
-    height: 100%;
-    flex: 2;
-    display: block;
-  }
-  .callToAction {
-    height: 150px;
-    width: 100%;
-    outline: #f58989 solid;
-    border-radius: 8px;
-  }
-  .tags {
-    height: 350px;
-    width: 100%;
-    outline: #b07a7a solid;
-    margin-top: 1em;
-    border-radius: 8px;
+  .buttom3 {
+    font-size: 30px;
+    color: blue;
+    background-color: whitesmoke;
+    padding: 18px;
+    border: 3px solid blue;
+    margin: auto;
+    width: -moz-fit-content;
+    width: fit-content;
+    border-radius: 10px;
+    text-decoration: none;
+    position: relative;
+    left: 1400px;
+    top: 29px;
   }
 }/*# sourceMappingURL=main.css.map */
