--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,7 +26,7 @@
     color: rgba(255, 255, 255, 0.7);
   }
 
-  /*.content {
+  .content {
     width: 80%;
     margin: 0 auto;
     display: flex;
@@ -40,7 +40,7 @@
     margin: 1em;
   }
 
-  .flex-col.left,
+  /*.flex-col.left,
   .flex-col.right {
     display: none;
   }
@@ -245,13 +245,13 @@
     }
 
 
-    .tags {
+    /*.tags {
       height: 350px;
       width: 100%;
       outline: #b07a7a solid;
       margin-top: 1em;
       border-radius: 8px;
-    }
+    }*/
 
     .img {
         height: 350px;
