--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
   color: rgba(255, 255, 255, 0.7);
 }
 
-/*.content {
+.content {
   width: 80%;
   margin: 0 auto;
   display: flex;
@@ -39,7 +39,7 @@ main {
   margin: 1em;
 }
 
-.flex-col.left,
+/*.flex-col.left,
 .flex-col.right {
   display: none;
 }
@@ -209,13 +209,13 @@ main {
   .bloque-enlaces li h3:hover {
     color: blue;
   }
-  .tags {
+  /*.tags {
     height: 350px;
     width: 100%;
     outline: #b07a7a solid;
     margin-top: 1em;
     border-radius: 8px;
-  }
+  }*/
   .img {
     height: 350px;
     width: 100%;
@@ -265,9 +265,10 @@ main {
 }
 
 .tags {
+  padding: 1rem;
   height: 350px;
   width: 100%;
-  outline: #b07a7a solid;
+  /*outline: #b07a7a solid;*/
   margin-top: 1em;
   border-radius: 8px;
 }
@@ -276,4 +277,21 @@ main {
   height: 100%;
   flex: 2;
   display: block;
+}
+
+.sidebar-nav {
+  display: flex;
+  padding: 1rem;
+  position: relative;
+  text-decoration: none;
+  outline: 0;
+  border-radius: 0.375rem;
+  max-width: 100%;
+}
+
+.icon {
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+  display: inline-block;
+  flex-shrink: 0;
 }/*# sourceMappingURL=main.css.map */
