--- a/sass/_aside.scss
+++ b/sass/_aside.scss
@@ -37,9 +37,10 @@
     padding:1px;
 }
 .tags {
+    padding: 1rem;
     height: 350px;
     width: 100%;
-    outline: #b07a7a solid;
+    /*outline: #b07a7a solid;*/
     margin-top: 1em;
     border-radius: 8px;
   }
@@ -49,4 +50,21 @@
     height: 100%;
     flex: 2;
     display: block;
+  }
+
+  .sidebar-nav{
+    display: flex;
+    padding: 1rem;
+    position: relative;
+    text-decoration: none;
+    outline: 0;
+    border-radius: 0.375rem;
+    max-width: 100%;
+  }
+
+  .icon{
+    margin-right:0.5rem;
+    margin-left: 0.5rem;
+    display: inline-block;
+    flex-shrink: 0;
   }
