--- a/sass/_aside.scss
+++ b/sass/_aside.scss
@@ -63,8 +63,6 @@
   }
 
   .icon{
-    margin-right:0.5rem;
-    margin-left: 0.5rem;
     display: inline-block;
-    flex-shrink: 0;
+    padding: 20px;
   }
