--- a/css/main.css
+++ b/css/main.css
@@ -246,22 +246,37 @@ main {
 
 .enlace1 {
   display: flex;
-  flex-direction: column;
-  text-align: center;
+  flex-direction: row;
+  justify-content: center;
   margin-bottom: 1rem;
   width: 100%;
-  border-width: 1px;
-  padding: 1px;
+  border-width: 0px;
+  padding: 5px;
+  background-color: transparent;
+  color: blue;
+  outline: solid blue;
+}
+
+.enlace1 a {
+  text-decoration: none;
 }
 
 .enlace2 {
   display: flex;
-  flex-direction: column;
-  text-align: center;
+  flex-direction: row;
+  justify-content: center;
   margin-bottom: 1rem;
   width: 100%;
   border-width: 1px;
-  padding: 1px;
+  padding: 5px;
+  background-color: transparent;
+  outline: 0;
+}
+
+.enlace2 a {
+  text-decoration: none;
+  color: black;
+  font-size: 1rem;
 }
 
 .tags {
@@ -287,9 +302,17 @@ main {
   outline: 0;
   border-radius: 0.375rem;
   max-width: 100%;
+  color: black;
+  font-size: 0.9rem;
 }
 
 .icon {
-  display: inline-block;
-  padding: 20px;
+  display: flex;
+  padding: 2px;
+}
+
+.logo {
+  max-width: 100%;
+  width: auto;
+  height: 15px;
 }/*# sourceMappingURL=main.css.map */
