--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
   color: rgba(255, 255, 255, 0.7);
 }
 
-/*.content {
+.content {
   width: 80%;
   margin: 0 auto;
   display: flex;
@@ -39,34 +39,19 @@ main {
   margin: 1em;
 }
 
-.flex-col.left,
+/*.flex-col.left,
 .flex-col.right {
   display: none;
 }
 
 main {
   flex: 1;
-  // outline: red solid;
+  outline: red solid;
   height: 100%;
 }*/
 /*navbar*/
-@media screen and (min-width: 980px) {
-  /*.navbar {
-    display: block;
-    background-color: #fff;
-    justify-content: space-between;
-    padding-bottom: 0;
-    height: 90px;
-    align-items: center;
-    margin-left: auto;
-  }*/
-  .main-nav {
-    display: flex;
-    margin-right: 30px;
-    list-style: none;
-  }
-}
-.links {
+/*  Itzel y Oswaldo  */
+links {
   margin-top: 5px;
 }
 
@@ -74,75 +59,6 @@ main {
   margin-right: 10px;
   text-decoration: none;
   color: rgb(109, 108, 108);
-}
-
-.nav-toggle {
-  align-items: flex-start;
-  margin-left: 50px;
-  font-size: 40px;
-  color: white;
-  background-color: black;
-  padding: 15px;
-  border-radius: 10px;
-  position: relative;
-  height: 70px;
-  left: 50px;
-  top: 16px;
-}
-
-.buttom1 {
-  color: gray;
-  font-size: 35px;
-  width: 900px;
-  height: 75px;
-  padding: 25px;
-  border: 4px solid gray;
-  margin: 15px;
-  border-radius: 10px;
-  position: relative;
-  left: 100px;
-}
-
-.buttom2 {
-  font-size: 30px;
-  color: gray;
-  list-style: none;
-  font-size: 30px;
-  padding: 25px;
-  margin: 8px;
-  width: 52px;
-  border-radius: 10px;
-  text-decoration: none;
-  position: relative;
-  left: 1400px;
-  top: 29px;
-}
-
-.buttom2:hover {
-  background-color: rgb(130, 198, 238);
-  text-decoration: underline;
-}
-
-.buttom3:hover {
-  background-color: blue;
-  color: white;
-  text-decoration: underline;
-}
-
-.buttom3 {
-  font-size: 30px;
-  color: blue;
-  background-color: whitesmoke;
-  padding: 18px;
-  border: 3px solid blue;
-  margin: auto;
-  width: -moz-fit-content;
-  width: fit-content;
-  border-radius: 10px;
-  text-decoration: none;
-  position: relative;
-  left: 1400px;
-  top: 29px;
 }
 
 .aqua span {
@@ -221,8 +137,103 @@ main {
   padding-top: 7px;
 }
 
-.button {
-  border: none;
+.img {
+  height: 100%;
+  width: 100%;
+  margin-top: 1em;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 8px;
+}
+
+/*  Itzel y Oswaldo  */
+@media screen and (min-width: 980px) {
+  /*.navbar {
+    display: block;
+    background-color: #fff;
+    justify-content: space-between;
+    padding-bottom: 0;
+    height: 90px;
+    align-items: center;
+    margin-left: auto;
+  }*/
+  .main-nav {
+    display: flex;
+    margin-right: 30px;
+    list-style: none;
+  }
+}
+.links a {
+  margin-right: 10px;
+}
+
+.nav-toggle {
+  align-items: flex-start;
+  margin-left: 10px;
+  font-size: 20px;
+  color: white;
+  background-color: black;
+  padding: 7px;
+  border-radius: 10px;
+  position: relative;
+  height: 40px;
+  left: 40px;
+  top: 25px;
+}
+
+.buttom1 {
+  color: gray;
+  font-size: 35px;
+  width: 450px;
+  height: 50px;
+  padding: 15px;
+  border: 4px solid gray;
+  margin: 15px;
+  border-radius: 10px;
+  position: relative;
+  left: 50px;
+}
+
+.buttom2 {
+  font-size: 30px;
+  color: gray;
+  list-style: none;
+  font-size: 30px;
+  padding: 25px;
+  margin: 8px;
+  width: 52px;
+  border-radius: 10px;
+  text-decoration: none;
+  position: relative;
+  left: 1400px;
+  top: 29px;
+}
+
+.buttom2:hover {
+  background-color: rgb(130, 198, 238);
+  text-decoration: underline;
+}
+
+.buttom3:hover {
+  background-color: blue;
+  color: white;
+  text-decoration: underline;
+}
+
+.buttom3 {
+  font-size: 30px;
+  color: blue;
+  background-color: whitesmoke;
+  padding: 18px;
+  border: 3px solid blue;
+  margin: auto;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 10px;
+  text-decoration: none;
+  position: relative;
+  left: 1400px;
+  top: 29px;
 }
 
 .logo_dev {
@@ -287,12 +298,6 @@ main {
   .nav-links:hover {
     color: rgb(0, 0, 0);
   }
-  .flex-col.left {
-    outline: blue solid;
-    height: 100%;
-    flex: 1;
-    display: block;
-  }
   main {
     flex: 4;
     height: 100%;
@@ -324,65 +329,114 @@ main {
   .bloque-enlaces li h3:hover {
     color: blue;
   }
-  .callToAction {
-    height: 150px;
-    width: 100%;
-    outline: #f58989 solid;
-    border-radius: 8px;
-  }
-  .tags {
+  /*.tags {
     height: 350px;
     width: 100%;
     outline: #b07a7a solid;
     margin-top: 1em;
     border-radius: 8px;
-  }
+  }*/
   .img {
     height: 350px;
     width: 100%;
-    outline: #d80f0f solid;
     margin-top: 1em;
+    background-size: cover;
     border-radius: 8px;
-    -o-object-fit: contain;
-       object-fit: contain;
   }
   .crayons-logo__image {
     display: flex;
     justify-content: center;
   }
 }
-.aside1 {
+.callToAction {
+  padding: 1rem;
+  background: white;
+  color: grey;
+  box-shadow: 0 0 0 1px;
+  display: block;
+}
+
+.h2-text {
+  line-height: 1.25;
   margin-bottom: 1rem;
   font-size: 1.25rem;
   color: #242424;
 }
 
-.aside2 {
+.parrafo-text {
   margin-bottom: 1rem;
   color: #575757;
 }
 
-.callToAction {
-  padding: 1rem;
-  background: white;
-  color: grey;
-}
-
-.caja2 {
-  box-sizing: border-box;
-  line-height: 1.5;
-}
-
-.create {
-  margin-bottom: 0.25rem;
-  width: 100%;
+.enlace1 {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
+  margin-bottom: 1rem;
+  width: 100%;
+  border-width: 0px;
+  padding: 5px;
+  background-color: transparent;
+  color: blue;
+  outline: solid blue;
+}
+
+.enlace1 a {
+  text-decoration: none;
+}
+
+.enlace2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 1rem;
+  width: 100%;
+  border-width: 1px;
+  padding: 5px;
+  background-color: transparent;
+  outline: 0;
+}
+
+.enlace2 a {
+  text-decoration: none;
+  color: black;
+  font-size: 1rem;
 }
 
 .tags {
+  padding: 1rem;
   height: 350px;
   width: 100%;
-  outline: #b07a7a solid;
+  /*outline: #b07a7a solid;*/
   margin-top: 1em;
   border-radius: 8px;
+}
+
+.flex-col.left {
+  height: 100%;
+  flex: 2;
+  display: block;
+}
+
+.sidebar-nav {
+  display: flex;
+  padding: 1rem;
+  position: relative;
+  text-decoration: none;
+  outline: 0;
+  border-radius: 0.375rem;
+  max-width: 100%;
+  color: black;
+  font-size: 0.9rem;
+}
+
+.icon {
+  display: flex;
+  padding: 2px;
+}
+
+.logo {
+  max-width: 100%;
+  width: auto;
+  height: 15px;
 }/*# sourceMappingURL=main.css.map */
