--- a/sass/_aside.scss
+++ b/sass/_aside.scss
@@ -1,34 +1,94 @@
-.aside1{
-    margin-bottom: 1rem;
-    font-size: 1.25rem;
-    color: #242424;
-}
-.aside2{
-    margin-bottom: 1rem;
-    color: #575757; 
-}
-
 .callToAction {
     padding: 1rem;
     background: white;
     color: grey;
+    box-shadow: 0 0 0 1px;
+    display: block;
 }
 
-.caja2{
-    box-sizing: border-box;
-    line-height: 1.5;
+.h2-text{
+    line-height: 1.25;
+    margin-bottom: 1rem;
+    font-size: 1.25rem;
+    color: #242424;
+}
+.parrafo-text{
+    margin-bottom: 1rem;
+    color: #575757; 
 }
 
-.create{
-    margin-bottom: .25rem;
-    width: 100%;
+.enlace1{
+    display: flex;
+    flex-direction: row;
     justify-content: center;
+    margin-bottom: 1rem;
+    width: 100%;
+    border-width: 0px;
+    padding:5px;
+    background-color: transparent;
+    color: blue;
+    outline: solid blue;
+   
+}
+
+.enlace1 a{
+  text-decoration: none;
+}
+
+.enlace2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 1rem;
+    width: 100%;
+    border-width: 1px;
+    padding:5px;
+    background-color: transparent;
+    outline: 0;
+}
+
+.enlace2 a{
+  text-decoration: none;
+  color: black;
+  font-size: 1rem;
 }
 
 .tags {
+    padding: 1rem;
     height: 350px;
     width: 100%;
-    outline: #b07a7a solid;
+    /*outline: #b07a7a solid;*/
     margin-top: 1em;
     border-radius: 8px;
+  }
+
+  .flex-col.left {
+    
+    height: 100%;
+    flex: 2;
+    display: block;
+  }
+
+  .sidebar-nav{
+    display: flex;
+    padding: 1rem;
+    position: relative;
+    text-decoration: none;
+    outline: 0;
+    border-radius: 0.375rem;
+    max-width: 100%;
+    color: black;
+    font-size: 0.9rem;
+  }
+
+  .icon{
+    display: flex;
+    padding: 2px;
+  }
+
+  .logo{
+    max-width: 100%;
+    width: auto;
+    height: 15px;
+
   }
