--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,7 +26,7 @@
     color: rgba(255, 255, 255, 0.7);
   }
 
-  /*.content {
+  .content {
     width: 80%;
     margin: 0 auto;
     display: flex;
@@ -40,17 +40,121 @@
     margin: 1em;
   }
 
-  .flex-col.left,
+  /*.flex-col.left,
   .flex-col.right {
     display: none;
   }
 
   main {
     flex: 1;
-    // outline: red solid;
+    outline: red solid;
     height: 100%;
   }*/
 /*navbar*/
+
+
+/*  Itzel y Oswaldo  */
+links {
+  margin-top: 5px;
+}
+
+.links a {
+  margin-right: 10px;
+  text-decoration: none;
+  color: rgb(109, 108, 108);
+}
+
+.aqua span {
+  color: aqua;
+}
+
+.aqua:hover {
+  border: 1px solid aqua;
+  background-color: rgba(170, 216, 216, 0.37);
+  border-radius: 5px;
+  padding: 2.5px;
+}
+
+.purple span {
+  color: purple;
+}
+
+.purple:hover {
+  border: 1px solid purple;
+  background-color: rgba(100, 57, 100, 0.384);
+  border-radius: 5px;
+  padding: 2.5px;
+}
+
+.yellow span {
+  color: yellow;
+}
+
+.yellow:hover {
+  border: 1px solid yellow;
+  background-color: rgba(232, 232, 130, 0.404);
+  border-radius: 5px;
+  padding: 2.5px;
+}
+
+.black span {
+  color: grey;
+}
+
+.black:hover {
+  border: 1px solid grey;
+  background-color: rgba(128, 128, 128, 0.333);
+  border-radius: 5px;
+  padding: 2.5px;
+}
+
+.icons {
+  margin: 10px 20px;
+  display: flex;
+}
+
+.icons a {
+  display: flex;
+  text-decoration: none;
+  color: grey;
+  margin-right: 20px;
+}
+
+.icons a i {
+  width: 15px;
+  margin-right: 5px;
+}
+
+.icons a p {
+  padding-top: 5px;
+  font-size: 15px;
+}
+
+.comments {
+  padding-top: 5px;
+  font-size: 15px;
+}
+
+.time {
+  font-size: 10px;
+  padding-top: 7px;
+}
+
+.img {
+    height: 100%;
+    width: 100%;
+    // outline: #d80f0f solid;
+    margin-top: 1em;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+
+/*  Itzel y Oswaldo  */
+
+
+
+
+
   @media screen and (min-width: 980px) {
     /*.navbar {
       display: block;
@@ -69,44 +173,37 @@
     }
   }
 
-.links{
-  margin-top: 5px;
-}
-
 .links a{
-  
   margin-right: 10px; 
-  text-decoration: none;
-  color: rgb(109, 108, 108);
 }
 
 
     .nav-toggle{ 
       align-items: flex-start;          
-      margin-left:50px;                    
-      font-size: 40px;      
+      margin-left:10px;                    
+      font-size: 20px;      
       color: white;
       background-color:black;
-      padding: 15px;      
+      padding: 7px;      
       border-radius: 10px; 
       position: relative; 
-      height: 70px; 
-      left:50px;
-      top:16px;        
+      height: 40px; 
+      left:40px;
+      top:25px;        
 
     }
 
     .buttom1{
       color:gray;
       font-size: 35px;      
-      width: 900px;
-      height: 75px;
-      padding:25px;
+      width: 450px;
+      height: 50px;
+      padding:15px;
       border:4px solid gray;
       margin: 15px;
       border-radius: 10px;
       position: relative;
-      left:100px;
+      left:50px;
 
            
 
@@ -323,13 +420,6 @@
     color: rgba(0, 0, 0, 1);
   }
 
-  .flex-col.left {
-    outline: blue solid;
-    height: 100%;
-    flex: 1;
-    display: block;
-  }
-
     main {
       flex: 4;
       // outline: red solid;
@@ -373,28 +463,22 @@
       }
     }
 
-    .callToAction {
-      height: 150px;
-      width: 100%;
-      outline: #f58989 solid;
-      border-radius: 8px;
-    }
 
-    .tags {
+    /*.tags {
       height: 350px;
       width: 100%;
       outline: #b07a7a solid;
       margin-top: 1em;
       border-radius: 8px;
-    }
+    }*/
 
     .img {
         height: 350px;
         width: 100%;
-        outline: #d80f0f solid;
+        // outline: #d80f0f solid;
         margin-top: 1em;
+        background-size: cover;
         border-radius: 8px;
-        object-fit: contain;
       }
 
       .crayons-logo__image {
