--- a/sass/main.scss
+++ b/sass/main.scss
@@ -140,13 +140,17 @@ links {
   padding-top: 7px;
 }
 
+main{
+  border-style: solid;
+  border-width: medium;
+}
+
 .img {
     height: 100%;
     width: 100%;
-    // outline: #d80f0f solid;
+    
     margin-top: 1em;
     object-fit: cover;
-    border-radius: 8px;
   }
 
 /*  Itzel y Oswaldo  */
@@ -342,7 +346,6 @@ links {
     .img {
         height: 350px;
         width: 100%;
-        // outline: #d80f0f solid;
         margin-top: 1em;
         background-size: cover;
         border-radius: 8px;
