--- a/sass/main.scss
+++ b/sass/main.scss
@@ -54,7 +54,7 @@
 
 
 /*  Itzel y Oswaldo  */
-links {
+.links {
   margin-top: 5px;
 }
 
@@ -350,4 +350,5 @@ links {
   }
 
 @import "aside";
+@import "footer";
   
